--- a/application/javatest.fxml
+++ b/application/javatest.fxml
@@ -52,7 +52,7 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
                <children>
-                  <TreeView id="treeView" fx:id="treeView" layoutY="33.0" prefHeight="572.0" prefWidth="177.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="33.0" />
+                  <TreeView id="treeView" fx:id="treeView" layoutY="33.0" onMouseClicked="#DisplayTextAreaOfSelectedFile" prefHeight="572.0" prefWidth="177.0" AnchorPane.bottomAnchor="2.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="33.0" />
                   <Separator layoutX="112.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="33.0" prefWidth="0.0" AnchorPane.topAnchor="-2.0" />
                   <Separator layoutX="54.0" layoutY="-2.0" orientation="VERTICAL" prefHeight="33.0" prefWidth="0.0" AnchorPane.topAnchor="0.0" />
                   <ImageView fitHeight="33.0" fitWidth="33.0" layoutX="118.0" onDragDetected="#addFile" onMouseClicked="#addFile" onTouchPressed="#addFile" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="575.0" AnchorPane.topAnchor="0.0">
@@ -76,7 +76,7 @@
                             <AnchorPane layoutX="132.0" layoutY="-173.0" minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0" />
                               <SplitPane dividerPositions="0.7281284606866003" orientation="VERTICAL" prefHeight="604.6666666666666" prefWidth="575.3333333333334" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                                 <items>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" onMouseClicked="#addFile" prefHeight="100.0" prefWidth="160.0">
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="100.0" prefWidth="160.0">
                                        <children>
                                           <TextArea id="mainTextArea" fx:id="textArea1" layoutX="-1.0" layoutY="20.0" prefHeight="466.0" prefWidth="575.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
                                           <TextArea id="mainTextArea1" fx:id="textArea2" layoutY="20.0" prefHeight="415.0" prefWidth="584.0" visible="false" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="20.0" />
